@@ -97,8 +97,6 @@ Gnometris:
 
 Gnomine:
         - Resizable window (2.4 since everything is already in place).
-        - Again, an unreproducable segfault (bugs 95231, 100932,
-          114223).
         - Check flag counting code and whether this is in fact bug
           103125 is still possible.        
 
